WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156728
[JSC] Fix some overhead affecting small codegen
https://bugs.webkit.org/show_bug.cgi?id=156728
Summary
[JSC] Fix some overhead affecting small codegen
Benjamin Poulain
Reported
2016-04-18 20:49:54 PDT
[JSC] Fix some overhead affecting small codegen
Attachments
Patch
(4.69 KB, patch)
2016-04-18 21:04 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-04-18 21:04:13 PDT
Created
attachment 276687
[details]
Patch
WebKit Commit Bot
Comment 2
2016-04-18 23:54:10 PDT
Comment on
attachment 276687
[details]
Patch Clearing flags on attachment: 276687 Committed
r199710
: <
http://trac.webkit.org/changeset/199710
>
WebKit Commit Bot
Comment 3
2016-04-18 23:54:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug