[JSC] Fix some overhead affecting small codegen https://bugs.webkit.org/show_bug.cgi?id=156728

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-04-18
Reviewed by Filip Pizlo.

* assembler/AbstractMacroAssembler.h:
(JSC::AbstractMacroAssembler::AbstractMacroAssembler):
(JSC::AbstractMacroAssembler::random):
cryptographicallyRandomNumber() is very costly.
We only need it in lowering some very particular cases
of non-trusted immediates. No inline cache needs that.

* assembler/LinkBuffer.h:
(JSC::LinkBuffer::link):
* jit/JIT.h:
* jit/JITInlines.h:
(JSC::JIT::addSlowCase):
Do not copy the JumpList to access its elements.

Canonical link: https://commits.webkit.org/174845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199710 268f45cc-cd09-0410-ab3c-d52691b4dbfc